# streamlit-synced-widgets

./: LICENSE.txt  README.md  pyproject.toml
src/streamlit_synced_widgets/: __init__.py
tests/: test_synced_widgets.py
