[tool.poetry]
name = "streamlit-synced-widgets"
version = "0.1.0"
description = "All of the streamlit widgets, but they automatically sync with the query parameters, to make it easy to share links to your app in a particular state."
authors = ["Zachary Blackwood <zachary@streamlit.io>"]
readme = "README.md"
packages = [{include = "streamlit_synced_widgets", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = ">=1.12.2"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
skip = ["./.venv", "./direnv", ".env"]

[tool.black]
exclude = '''
(
  /(
      \.vscode
    | \.git
    | \.pytest_cache
    | \.mypy_cache
    | \.venv
    | \.env
    | \.direnv
  )/
)
'''
include = '\.pyi?$'
line-length = 88

[tool.mypy]
files = [
  "**/*.py",
]
follow_imports = "silent"
ignore_missing_imports = true
scripts_are_modules = true
python_version = 3.9
